--- a/index.html
+++ b/index.html
@@ -58,19 +58,8 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-
-										<li><a href="index.html">Home</a></li>
+								<li class="current-list-item"><a href="index.html">Home</a></li>
 								<li><a href="about.html">About</a></li>
-								<li><a href="#">Pages</a>
-									<ul class="sub-menu">
-										<li><a href="404.html">404 page</a></li>
-										<li><a href="about.html">About</a></li>
-										<li><a href="cart.html">Cart</a></li>
-										<li><a href="checkout.html">Check Out</a></li>
-										<li><a href="contact.html">Contact</a></li>
-										<li><a href="shop.html">Shop</a></li>
-									</ul>
-								</li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="shop.html">Shop</a>
 									<ul class="sub-menu">
@@ -80,6 +69,7 @@
 										<li><a href="cart.html">Cart</a></li>
 									</ul>
 								</li>
+								<li><a href="education.html">Educational dashboard</a></li>
 								<li>
 									<div class="header-icons">
 										<a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
@@ -98,9 +88,6 @@
 	</div>
 	<!-- end header -->
 	
-	<!-- search area -->
-	<!-- end search area -->
-
 	<!-- home page slider -->
 	<div class="homepage-slider">
 		<!-- single home slider -->
