--- a/education.html
+++ b/education.html
@@ -278,7 +278,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
-                        <p>Copyrights &copy; 2024 - Tanmay Karra</p>
+                        <p>Copyrights &copy; 2024 - Priyansha </p>
                     </div>
                     <div class="col-lg-6 text-right col-md-12">
                         <div class="social-icons">
