login php and educational dashboard

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title> About us</title>
+	<title>About Us</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
@@ -59,7 +59,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="index.php">Home</a></li>
 								<li class="current-list-item"><a href="about.html">About</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="shop.html">Shop</a>
@@ -70,7 +70,7 @@
 										<li><a href="cart.html">Cart</a></li>
 									</ul>
 								</li>
-								<li><a href="education.html">Educational dashboard</a></li>
+								<li><a href="education.php">Educational dashboard</a></li>
 								<li>
 									<div class="header-icons">
 										<a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
@@ -160,6 +160,45 @@
 		</div>
 	</div>
 	<!-- end featured section -->
+	<!-- functionality section -->
+	<div class="mt-150">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 offset-lg-2 text-center">
+					<div class="section-title">
+						<h3>Our <span class="orange-text">Unique</span> Features</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-4 col-md-6">
+					<div class="single-team-item">
+						<div class="team-bg unique-bg-1"></div>
+						<h4>Influencer Program<span>Our Influencer Program: A synergy of sustainability and influence,
+							 connecting ShopSustain with eco-conscious influencers for a greener impact.</span></h4>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="single-team-item">
+						<div class="team-bg unique-bg-2"></div>
+						<h4>Carbon Footprint Calculator<span>Introducing our Carbon Footprint Calculator: Empowering conscious choices by quantifying environmental impact. 
+							Navigate sustainability with informed decisions at ShopSustain.</span></h4>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
+					<div class="single-team-item">
+						<div class="team-bg unique-bg-3"></div>
+						<h4>Educational Dashboard<span>Discover our Educational Dashboard: Empowering sustainable knowledge. 
+							Dive into eco-conscious insights and make informed choices at ShopSustain.</span></h4>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end functionality section -->
+
+
 	<!-- team section -->
 	<div class="mt-150">
 		<div class="container">
